@@ -69,7 +69,7 @@
 
         <!-- lazy dev -->
         <version.org.mapstruct>1.4.2.Final</version.org.mapstruct>
-        <version.org.projectlombok>1.18.22</version.org.projectlombok>
+        <version.org.projectlombok>1.18.30</version.org.projectlombok>
 
         <!-- code gen -->
         <version.org.openapitools.generator-maven-plugin>6.1.0</version.org.openapitools.generator-maven-plugin>
@@ -319,6 +319,11 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${version.org.apache.maven.plugins.maven-surfire-plugin}</version>
+                <configuration>
+                    <argLine>@{argLine} --add-opens java.base/java.lang=ALL-UNNAMED --add-opens
+                        java.base/java.time=ALL-UNNAMED
+                    </argLine>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
